--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/Dick_Ward.html">
                     <img width="304" height="304" class="prof-image" src="img/students/Dick_Ward_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
